--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,9 @@
         "prettier"
     ],
     "rules": {
+        "camelcase": "off",
+        "class-methods-use-this": "off",
+        "import/prefer-default-export": "off",
         "prettier/prettier": "error",
         "import/extensions": [
             "error",
