--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.21.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.8.0",
