--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,13 @@ jobs:
       - name: Run build
         run: yarn build
         
+      - name: Add Firebase Account Service into Config
+        uses: DamianReeves/write-file-action@v1.0
+        with:
+          path: ./dist/Config/Firebase/ServiceAccountKey.json
+          contents: ${{ secrets.FIREBASE_ACCOUNT_KEY }}
+          write-mode: overwrite
+        
         
       - name: Copy code to Digital Ocean
         uses: appleboy/scp-action@master
