--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.21.3",
