--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@babel/preset-typescript": "^7.13.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
+    "@types/crypto-js": "^4.0.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/multer": "^1.4.5",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -39,11 +41,13 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "date-fns": "^2.21.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.8.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.32",
