--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,9 @@
         "camelcase": "off",
         "class-methods-use-this": "off",
         "import/prefer-default-export": "off",
+        "@typescript-eslint/no-unused-vars": ["error", {
+            "argsIgnorePattern": "_"
+        }],
         "prettier/prettier": "error",
         "import/extensions": [
             "error",
