--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^2.21.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "firebase-admin": "^9.8.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
