--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,7 @@
     // "noUncheckedIndexedAccess": true,      /* Include 'undefined' in index signature results */
 
     /* Module Resolution Options */
+
     "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
     "resolveJsonModule": true,
     "baseUrl": "./src",                       /* Base directory to resolve non-absolute module names. */
@@ -49,7 +50,8 @@
         "@controllers/*": ["App/Controllers/*"],
         "@models/*": ["App/Models/*"],
         "@utils/*": ["Functions/*"],
-        "@config/*": ["Config/*"]
+        "@config/*": ["Config/*"],
+        "@errors/*": ["Errors/*"]
     },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
