--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/crypto-js": "^4.0.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.9",
+    "@types/ioredis": "^4.26.4",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/multer": "^1.4.5",
     "@types/redis": "^2.8.30",
@@ -47,6 +48,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "firebase-admin": "^9.8.0",
+    "ioredis": "^4.27.6",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "pg": "^8.6.0",
