--- a/package.json
+++ b/package.json
@@ -5,8 +5,27 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
-    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
+    "dev": "ts-node-dev -r dotenv/config -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
     "typeorm": "node --require ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
+    "date-fns": "^2.21.3",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "firebase-admin": "^9.8.0",
+    "ioredis": "^4.27.6",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
+    "pg": "^8.6.0",
+    "rate-limiter-flexible": "^2.2.2",
+    "redis": "^3.1.2",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.32",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
@@ -39,23 +58,4 @@
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
   },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.0.0",
-    "date-fns": "^2.21.3",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "firebase-admin": "^9.8.0",
-    "ioredis": "^4.27.6",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.2",
-    "pg": "^8.6.0",
-    "rate-limiter-flexible": "^2.2.2",
-    "redis": "^3.1.2",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.32",
-    "yup": "^0.32.9"
-  }
 }
