--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "typeorm": "node --require ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "@sentry/node": "^6.7.2",
+    "@sentry/tracing": "^6.7.2",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
