--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,6 +52,7 @@
         "@models/*": ["App/Models/*"],
         "@utils/*": ["Functions/*"],
         "@config/*": ["Config/*"],
+        "@services/*": ["Services/*"],
         "@errors/*": ["Errors/*"]
     },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
