--- a/ormconfig.json.example
+++ b/ormconfig.json.example
@@ -1,8 +1,11 @@
 {
-    "type": "",
+    "type": "postgres",
     "host": "",
-    "port": "",
+    "port": 5432,
     "username": "",
     "password": "",
-    "database": ""
+    "database": "",
+    "migrations": [
+        "src/Services/Database/Typeorm/migrations/*.ts"
+    ]
 }
