--- a/ormconfig.json.example
+++ b/ormconfig.json.example
@@ -7,5 +7,8 @@
     "database": "",
     "migrations": [
         "src/Services/Database/Typeorm/migrations/*.ts"
-    ]
+    ],
+    "cli": {
+        "migrationsDir": "src/Services/Database/Typeorm/migrations"
+    }
 }
