--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ioredis": "^4.27.6",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "node-schedule": "^2.0.0",
     "pg": "^8.6.0",
     "rate-limiter-flexible": "^2.2.2",
     "redis": "^3.1.2",
@@ -44,6 +45,7 @@
     "@types/ioredis": "^4.26.4",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/multer": "^1.4.5",
+    "@types/node-schedule": "^1.3.2",
     "@types/redis": "^2.8.30",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
