--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,14 @@ jobs:
         
       # Realização da build
       - name: Run build
-        run: yarn build        
+        run: yarn build
+        
+      - name: Add Firebase Account Service into Config
+        uses: DamianReeves/write-file-action@v1.0
+        with:
+          path: ~/apps/teams/dist/Config/Firebase/ServiceAccountKey.json
+          contents: echo ${{ secrets.FIREBASE_ACCOUNT_KEY }}
+          write-mode: overwrite
         
       - name: Copy code to Digital Ocean
         uses: appleboy/scp-action@master
@@ -67,11 +74,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
           script: | 
-            cd "~/apps/teams/dist/Config/Firebase/"
-            touch ServiceAccountKey.json
-            echo ${{secrets.FIREBASE_ACCOUNT_KEY}} >> ServiceAccountKey.json
-            cat ServiceAccountKey.json
-            cd "../../../"
+            cd "~/apps/teams"
             yarn            
             ./node_modules/.bin/typeorm migration:run
             pm2 restart ExpiryTeams
