--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ REVENUECAT_API_KEY=
 APPLICATION_SECRET_BACKUP_CRYPT=
 
 MAIL_SERVICE_URL=
+ # At 09:00 on Monday.
+MAIL_NOTIFICATION_PERIOD=0 * * * * *
 
 #Sentry
 SENTRY_DSN=
