--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,13 +49,6 @@ jobs:
       - name: Run build
         run: yarn build
         
-      - name: Add Firebase Account Service into Config
-        uses: DamianReeves/write-file-action@v1.0
-        with:
-          path: ~/apps/teams/dist/Config/Firebase/ServiceAccountKey.json
-          contents: echo ${{ secrets.FIREBASE_ACCOUNT_KEY }}
-          write-mode: overwrite
-        
       - name: Copy code to Digital Ocean
         uses: appleboy/scp-action@master
         with:
@@ -73,7 +66,8 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
-          script: | 
+          script: |
+            echo ${{ secrets.FIREBASE_ACCOUNT_KEY }} > ~/apps/teams/dist/Config/Firebase/ServiceAccountKey.json
             cd "~/apps/teams"
             yarn            
             ./node_modules/.bin/typeorm migration:run
