--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,12 @@ jobs:
         
       # Realização da build
       - name: Run build
-        run: yarn build
+        env:
+          FIREBASE_FILE: ${{ secrets.FIREBASE_ACCOUNT_KEY }}
+        run: |
+          yarn build          
+          echo $FIREBASE_FILE > /dist/Config/Firebase/ServiceAccountKey.json
+          
         
       - name: Copy code to Digital Ocean
         uses: appleboy/scp-action@master
@@ -66,8 +71,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
-          script: |
-            echo ${{ secrets.FIREBASE_ACCOUNT_KEY }} > ~/apps/teams/dist/Config/Firebase/ServiceAccountKey.json
+          script: |            
             cd "~/apps/teams"
             yarn            
             ./node_modules/.bin/typeorm migration:run
