--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@sentry/node": "^6.7.2",
     "@sentry/tracing": "^6.7.2",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "crypto-js": "^4.0.0",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.21.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -38,6 +39,7 @@
     "@babel/plugin-proposal-decorators": "^7.14.2",
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.10",
     "@types/crypto-js": "^4.0.1",
     "@types/dotenv": "^8.2.0",
