--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
-    "dev": "ts-node-dev -r dotenv/config -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
+    "dev": "ts-node-dev --inspect -r dotenv/config -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
     "typeorm": "node --require ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
