--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "dev": "ts-node-dev --inspect -r dotenv/config -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
-    "typeorm": "node --require ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+    "typeorm": "node --require ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "test": "jest --no-cache"
   },
   "dependencies": {
     "@sentry/node": "^6.7.2",
@@ -38,17 +39,19 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-decorators": "^7.14.2",
     "@babel/preset-env": "^7.14.4",
-    "@babel/preset-typescript": "^7.13.0",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.10",
     "@types/crypto-js": "^4.0.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.9",
     "@types/ioredis": "^4.26.4",
+    "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/multer": "^1.4.5",
     "@types/node-schedule": "^1.3.2",
     "@types/redis": "^2.8.30",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -59,7 +62,10 @@
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
+    "jest": "^27.4.5",
     "prettier": "^2.2.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.1.2",
     "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
