--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ ONESIGNAL_APP_ID=
 REVENUECAT_API_KEY=
 ONESIGNAL_API_KEY=
 
+BLUESOFT_TOKEN=
+
 APPLICATION_SECRET_BACKUP_CRYPT=
 
 MAIL_SERVICE_URL=
