--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
-    "dev": "ts-node-dev --inspect -r dotenv/config -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
+    "dev": "npm-run-all -p dev:*",
+    "dev:server": "ts-node-dev --inspect -r dotenv/config -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
+    "dev:queue": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/queue.ts",
     "typeorm": "node --require ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "test": "jest --no-cache"
   },
@@ -14,6 +16,7 @@
     "@sentry/tracing": "^6.17.3",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "bull": "^4.8.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.21.3",
@@ -41,6 +44,7 @@
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-typescript": "^7.16.7",
     "@types/bcrypt": "^5.0.0",
+    "@types/bull": "^3.15.8",
     "@types/cors": "^2.8.10",
     "@types/crypto-js": "^4.0.1",
     "@types/dotenv": "^8.2.0",
@@ -63,6 +67,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
     "jest": "^27.4.5",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.2",
