--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "test": "jest --no-cache"
   },
   "dependencies": {
-    "@sentry/node": "^6.17.3",
-    "@sentry/tracing": "^6.17.3",
+    "@sentry/node": "^6.19.1",
+    "@sentry/tracing": "^6.19.1",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "bull": "^4.8.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.21.3",
+    "date-fns-tz": "^1.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
