--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,9 +73,10 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
           script: |            
-            cd "~/apps/teams"
+            cd ~/apps/teams
             yarn            
             yarn typeorm migration:run
             pm2 restart ExpiryTeams
-            
+            pm2 restart expiry-checker-queues
+            echo "Finished"
 
