--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:server": "ts-node-dev --inspect -r dotenv/config -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
     "dev:queue": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/queue.ts",
     "typeorm": "node --require ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "test": "jest --no-cache"
+    "test": "jest"
   },
   "dependencies": {
     "@sentry/node": "^6.19.1",
@@ -51,7 +51,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.9",
     "@types/ioredis": "^4.26.4",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/multer": "^1.4.5",
     "@types/node-schedule": "^1.3.2",
@@ -67,11 +67,11 @@
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
-    "jest": "^27.4.5",
+    "jest": "^27.5.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
-    "supertest": "^6.1.6",
-    "ts-jest": "^27.1.2",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.4",
     "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
