--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
+    "firebase-mock": "^2.3.2",
     "jest": "^27.5.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
