--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     ],
     "rules": {
         "camelcase": "off",
+        "no-console": "off",
         "class-methods-use-this": "off",
         "import/prefer-default-export": "off",
         "@typescript-eslint/no-unused-vars": ["error", {
