--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rate-limiter-flexible": "^2.2.2",
     "redis": "^4.0.4",
     "reflect-metadata": "^0.1.13",
+    "stream-json": "^1.7.4",
     "typeorm": "^0.2.32",
     "yup": "^0.32.9"
   },
@@ -56,6 +57,7 @@
     "@types/multer": "^1.4.5",
     "@types/node-schedule": "^1.3.2",
     "@types/redis": "^4.0.11",
+    "@types/stream-json": "^1.7.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
