--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,11 +48,13 @@ jobs:
       # Realização da build
       - name: Run build
         env:
-          FIREBASE_FILE: ${{ secrets.FIREBASE_ACCOUNT_KEY }}
+          FIREBASE_FILE: ${{ secrets.FIREBASE_ACCOUNT_KEY }}          
+          FIREBASE_EXPIRYCHECKER_FILE: ${{ secrets.EXPIRY_CHECKER_FIREBASE_ACCOUNT_KEY }}
         run: |
           yarn build
           ls
-          echo $FIREBASE_FILE > ./dist/Config/Firebase/ServiceAccountKey.json
+          echo $FIREBASE_FILE > ./dist/Config/Firebase/ServiceAccountKey.json          
+          echo $FIREBASE_EXPIRYCHECKER_FILE > ./dist/Config/Firebase/ExpiryCheckerServiceAccountKey.json
           
         
       - name: Copy code to Digital Ocean
