--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev:server": "ts-node-dev --inspect -r dotenv/config -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
     "dev:queue": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/queue.ts",
     "typeorm": "node --require ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch --verbose=true"
   },
   "dependencies": {
     "@sentry/node": "^6.19.1",
