Adding initial logs for products change

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,7 @@
     "resolveJsonModule": true,
     "baseUrl": "./src",                       /* Base directory to resolve non-absolute module names. */
     "paths": {
+        "@types/*": ["@types/*"],
         "@controllers/*": ["App/Controllers/*"],
         "@middlewares/*": ["App/Middlewares/*"],
         "@models/*": ["App/Models/*"],
