--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
+    "babel-core": "^6.26.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^7.17.0",
@@ -77,7 +78,6 @@
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.4",
     "ts-node-dev": "^1.1.1",
-    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
   }
 }
