Adding batch create logs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,7 +34,9 @@
             {
                 "ts": "never"
             }
-        ]
+        ],
+        "no-shadow": "off",
+        "@typescript-eslint/no-shadow": ["error"]
     },
     "settings": {
         "import/resolver": {
