--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "baseUrl": "./src",
         "paths": {
             "~types/*": ["@types/*"],
+            "~tests/*": ["../__tests__/*"],
             "@controllers/*": ["App/Controllers/*"],
             "@middlewares/*": ["App/Middlewares/*"],
             "@models/*": ["App/Models/*"],
