--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ioredis": "^4.27.6",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "newrelic": "^8.14.1",
     "node-schedule": "^2.0.0",
     "pg": "^8.6.0",
     "rate-limiter-flexible": "^2.2.2",
