--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@sentry/node": "^7.12.1",
     "@sentry/tracing": "^7.12.1",
+    "aws-sdk": "^2.1265.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "bull": "^4.8.1",
