--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
           
         
       - name: Copy code to Digital Ocean
-        uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@v0.1.3
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
@@ -66,8 +66,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           source: ".,!node_modules"
           target: "~/apps/teams"
-          tar_tmp_path: "~/tempBuild"
-          timeout: 60s
                     
       - name: Run production scripts
         uses: appleboy/ssh-action@master
