--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "redis": "^4.0.4",
     "reflect-metadata": "^0.1.13",
     "stream-json": "^1.7.4",
-    "typeorm": "^0.2.45",
+    "typeorm": "0.3.17",
     "yup": "^0.32.9"
   },
   "devDependencies": {
