--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rate-limiter-flexible": "^2.2.2",
     "redis": "^4.0.4",
     "reflect-metadata": "^0.1.13",
+    "sharp": "^0.32.4",
     "stream-json": "^1.7.4",
     "typeorm": "0.3.17",
     "yup": "^0.32.9"
