--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files && yarn sentry:sourcemaps",
     "dev": "npm-run-all -p dev:*",
     "dev:server": "ts-node-dev --inspect -r dotenv/config -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
     "dev:queue": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/queue.ts",
     "typeorm": "node --require ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "test": "jest",
-    "test:watch": "jest --watch --verbose=true"
+    "test:watch": "jest --watch --verbose=true",
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org douglasndm --project expiry-teams-backend ./dist && sentry-cli sourcemaps upload --org douglasndm --project expiry-teams-backend ./dist"
   },
   "dependencies": {
-    "@sentry/node": "^7.60.0",
+    "@sentry/cli": "^2.27.0",
+    "@sentry/node": "^7.99.0",
     "@sentry/tracing": "^7.60.0",
     "aws-sdk": "^2.1265.0",
     "axios": "^0.21.1",
