--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,7 +79,6 @@ jobs:
             cd ~/apps/expirychecker
             yarn            
             yarn typeorm migration:run
-            pm2 restart expiry-checker
-            pm2 restart expiry-checker-queues
+            pm2 restart 0 1
             echo "Finished"
 
