--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,6 +79,7 @@ jobs:
             cd ~/apps/expirychecker
             yarn            
             yarn typeorm migration:run
-            pm2 restart 0 1
+            pm2 restart expiry-checker
+            pm2 restart expiry-checker-queues
             echo "Finished"
 
