--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,8 +77,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |            
             cd ~/apps/expirychecker
-            yarn            
-            yarn typeorm migration:run
+            nvm exec "20" yarn            
+            nvm exec "20" yarn typeorm migration:run
             pm2 restart expiry-checker
             pm2 restart expiry-checker-queues
             echo "Finished"
