--- a/package.json
+++ b/package.json
@@ -29,13 +29,12 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "firebase-admin": "^10.1.0",
-    "ioredis": "^4.27.6",
+    "ioredis": "5.3.2",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "node-schedule": "^2.0.0",
     "pg": "^8.6.0",
     "rate-limiter-flexible": "^2.2.2",
-    "redis": "^4.0.4",
     "reflect-metadata": "^0.1.13",
     "sharp": "^0.32.4",
     "stream-json": "^1.7.4",
@@ -56,12 +55,11 @@
     "@types/crypto-js": "^4.0.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
-    "@types/ioredis": "^4.26.4",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/multer": "^1.4.5",
+    "@types/node": "^20.11.20",
     "@types/node-schedule": "^1.3.2",
-    "@types/redis": "^4.0.11",
     "@types/stream-json": "^1.7.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
