--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "dev": "npm-run-all -p dev:*",
-    "dev:server": "ts-node-dev --inspect -r dotenv/config -r tsconfig-paths/register -r newrelic --respawn --transpile-only src/server.ts",
+    "dev:server": "ts-node-dev --inspect -r dotenv/config -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
     "dev:queue": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/queue.ts",
     "typeorm": "node --require ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "test": "jest",
@@ -28,7 +28,6 @@
     "ioredis": "5.3.2",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
-    "newrelic": "^11.23.2",
     "node-schedule": "^2.0.0",
     "pg": "^8.12.0",
     "rate-limiter-flexible": "^2.4.2",
