Moving ormconfig to root project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
         "paths": {
             "~types/*": ["@types/*"],
             "@tests/*": ["../__tests__/*"],
+            "@project/*": ["../../../*"],
             "@controllers/*": ["App/Controllers/*"],
             "@middlewares/*": ["App/Middlewares/*"],
             "@models/*": ["App/Models/*"],
