--- a/package.json
+++ b/package.json
@@ -1,81 +1,82 @@
 {
-  "name": "cvbusiness",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
-    "dev": "npm-run-all -p dev:*",
-    "dev:server": "ts-node-dev --inspect -r dotenv/config -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
-    "dev:queue": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/queue.ts",
-    "typeorm": "node --require ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "test": "jest",
-    "test:watch": "jest --watch --verbose=true"
-  },
-  "dependencies": {
-    "aws-sdk": "^2.1668.0",
-    "axios": "^0.28.1",
-    "bcrypt": "^5.1.1",
-    "bull": "^4.8.1",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.2.0",
-    "date-fns": "^2.30.0",
-    "date-fns-tz": "^1.3.8",
-    "dotenv": "^10.0.0",
-    "express": "^4.18.2",
-    "express-async-errors": "^3.1.1",
-    "firebase-admin": "^10.3.0",
-    "ioredis": "5.3.2",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.4",
-    "node-schedule": "^2.0.0",
-    "pg": "^8.12.0",
-    "rate-limiter-flexible": "^2.4.2",
-    "reflect-metadata": "^0.1.14",
-    "sharp": "^0.32.4",
-    "stream-json": "^1.7.4",
-    "typeorm": "0.3.20",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.14.3",
-    "@babel/core": "^7.14.3",
-    "@babel/node": "^7.14.2",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-decorators": "^7.14.2",
-    "@babel/preset-env": "^7.14.4",
-    "@babel/preset-typescript": "^7.16.7",
-    "@types/bcrypt": "^5.0.0",
-    "@types/bull": "^3.15.8",
-    "@types/cors": "^2.8.10",
-    "@types/crypto-js": "^4.0.1",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^27.4.1",
-    "@types/jsonwebtoken": "^8.5.1",
-    "@types/multer": "^1.4.5",
-    "@types/node": "^20.11.20",
-    "@types/node-schedule": "^1.3.2",
-    "@types/stream-json": "^1.7.2",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
-    "babel-core": "^6.26.3",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "babel-plugin-transform-typescript-metadata": "^0.3.2",
-    "eslint": "^7.17.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.0",
-    "firebase-mock": "^2.3.2",
-    "jest": "^27.5.1",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
-    "supertest": "^6.3.4",
-    "ts-jest": "^27.1.4",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.9.5"
-  }
+    "name": "cvbusiness",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
+    "scripts": {
+        "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
+        "dev": "yarn dev:server && yarn dev:queue",
+        "dev:server": "ts-node-dev --inspect -r dotenv/config -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
+        "dev:queue": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/queue.ts",
+        "typeorm": "node --require ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+        "test": "jest",
+        "test:watch": "jest --watch --verbose=true"
+    },
+    "dependencies": {
+        "@aws-sdk/client-s3": "^3.717.0",
+        "@aws-sdk/lib-storage": "^3.717.0",
+        "@aws-sdk/s3-request-presigner": "^3.717.0",
+        "axios": "^0.29.0",
+        "bcrypt": "^5.1.1",
+        "bull": "^4.8.1",
+        "cors": "^2.8.5",
+        "crypto-js": "^4.2.0",
+        "date-fns": "^2.30.0",
+        "date-fns-tz": "^1.3.8",
+        "dotenv": "^16.4.7",
+        "express": "^4.18.2",
+        "express-async-errors": "^3.1.1",
+        "firebase-admin": "^10.3.0",
+        "ioredis": "5.3.2",
+        "jsonwebtoken": "^8.5.1",
+        "multer": "^1.4.4",
+        "node-schedule": "^2.0.0",
+        "pg": "^8.13.1",
+        "rate-limiter-flexible": "^2.4.2",
+        "reflect-metadata": "^0.2.2",
+        "sharp": "^0.32.6",
+        "stream-json": "^1.7.4",
+        "typeorm": "0.3.20",
+        "yup": "^0.32.11"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.14.3",
+        "@babel/core": "^7.14.3",
+        "@babel/node": "^7.14.2",
+        "@babel/plugin-proposal-class-properties": "^7.13.0",
+        "@babel/plugin-proposal-decorators": "^7.14.2",
+        "@babel/preset-env": "^7.14.4",
+        "@babel/preset-typescript": "^7.16.7",
+        "@types/bcrypt": "^5.0.0",
+        "@types/bull": "^3.15.8",
+        "@types/cors": "^2.8.10",
+        "@types/crypto-js": "^4.0.1",
+        "@types/dotenv": "^8.2.0",
+        "@types/express": "^4.17.17",
+        "@types/jest": "^27.4.1",
+        "@types/jsonwebtoken": "^8.5.1",
+        "@types/multer": "^1.4.5",
+        "@types/node": "^20.11.20",
+        "@types/node-schedule": "^1.3.2",
+        "@types/stream-json": "^1.7.2",
+        "@types/supertest": "^2.0.12",
+        "@typescript-eslint/eslint-plugin": "^4.11.1",
+        "@typescript-eslint/parser": "^4.11.1",
+        "babel-core": "^6.26.3",
+        "babel-plugin-module-resolver": "^4.1.0",
+        "babel-plugin-transform-typescript-metadata": "^0.3.2",
+        "eslint": "^7.17.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-config-prettier": "^7.1.0",
+        "eslint-import-resolver-typescript": "^2.7.1",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-prettier": "^3.3.0",
+        "firebase-mock": "^2.3.2",
+        "jest": "^27.5.1",
+        "prettier": "^2.2.1",
+        "supertest": "^6.3.4",
+        "ts-jest": "^27.1.5",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.7.2"
+    }
 }
