--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
         "date-fns": "^2.30.0",
         "date-fns-tz": "^1.3.8",
         "dotenv": "^16.4.7",
-        "express": "^4.18.2",
+        "express": "^4.21.2",
         "express-async-errors": "^3.1.1",
         "firebase-admin": "^10.3.0",
         "ioredis": "5.3.2",
         "jsonwebtoken": "^8.5.1",
-        "multer": "^1.4.4",
+        "multer": "^1.4.5-lts.1",
         "node-schedule": "^2.0.0",
         "pg": "^8.13.1",
         "rate-limiter-flexible": "^2.4.2",
@@ -52,10 +52,10 @@
         "@types/cors": "^2.8.10",
         "@types/crypto-js": "^4.0.1",
         "@types/dotenv": "^8.2.0",
-        "@types/express": "^4.17.17",
+        "@types/express": "^5.0.0",
         "@types/jest": "^27.4.1",
         "@types/jsonwebtoken": "^8.5.1",
-        "@types/multer": "^1.4.5",
+        "@types/multer": "^1.4.12",
         "@types/node": "^20.11.20",
         "@types/node-schedule": "^1.3.2",
         "@types/stream-json": "^1.7.2",
