Welcome back sentry

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ PORT=
 FIREBASE_DEV_UID=
 FIREBASE_DEV_EMAIL=
 
+SENTRY_DSN=
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 
@@ -21,12 +23,6 @@ APPLICATION_SECRET_BACKUP_CRYPT=
 MAIL_SERVICE_URL=
  # At 09:00 on Monday.
 MAIL_NOTIFICATION_PERIOD=0 * * * * *
-
-NEW_RELIC_AI_MONITORING_ENABLED=true
-NEW_RELIC_CUSTOM_INSIGHTS_EVENTS_MAX_SAMPLES_STORED=100k
-NEW_RELIC_SPAN_EVENTS_MAX_SAMPLES_STORED=10k
-NEW_RELIC_APP_NAME=
-NEW_RELIC_LICENSE_KEY=
 
 #Redis
 REDIS_HOST=
