--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@aws-sdk/client-s3": "^3.717.0",
         "@aws-sdk/lib-storage": "^3.717.0",
         "@aws-sdk/s3-request-presigner": "^3.717.0",
+        "@sentry/node": "^8.47.0",
+        "@sentry/profiling-node": "^8.47.0",
         "axios": "^0.29.0",
         "bcrypt": "^5.1.1",
         "bull": "^4.8.1",
