--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "express-async-errors": "^3.1.1",
-        "firebase-admin": "^10.3.0",
+        "firebase-admin": "^13.0.2",
         "ioredis": "5.3.2",
         "jsonwebtoken": "^8.5.1",
         "multer": "^1.4.5-lts.1",
@@ -80,5 +80,6 @@
         "ts-jest": "^27.1.5",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.7.2"
-    }
+    },
+    "packageManager": "yarn@4.5.3"
 }
