--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "es6",
-        "module": "commonjs",
+        "module": "CommonJS",
+        "target": "ES2015",
         "allowJs": true,
         "outDir": "./dist",
         "strict": true,
