--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,9 @@ yarn-error.log
 .yarn/install-state.gz
 
 .env
-ormconfig.json
+.sentryclirc
 
 .DS_Store
-
-newrelic.js
-newrelic_agent.log
 
 *.pkg
 node_modules
