removing ip_address and last_login from user_logins

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "dev": "yarn dev:server && yarn dev:queue",
         "dev:server": "ts-node-dev --inspect -r dotenv/config -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
         "dev:queue": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/Queue.ts",
-        "typeorm": "node --require ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d ./src/Services/TypeORM.ts",
+        "typeorm": "ts-node -r dotenv/config -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d ./src/Services/TypeORM.ts",
         "test": "jest",
         "test:watch": "jest --watch --verbose=true"
     },
@@ -77,6 +77,7 @@
         "prettier": "^2.2.1",
         "supertest": "^6.3.4",
         "ts-jest": "^29.2.5",
+        "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.7.3"
     },
