--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "sharp": "^0.32.6",
         "stream-json": "^1.7.4",
         "typeorm": "0.3.20",
-        "yup": "^0.32.11"
+        "yup": "^1.6.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.26.4",
@@ -50,6 +50,7 @@
         "@babel/plugin-proposal-decorators": "^7.25.9",
         "@babel/preset-env": "^7.26.7",
         "@babel/preset-typescript": "^7.26.0",
+        "@jest/globals": "^29.7.0",
         "@sentry/cli": "^2.41.1",
         "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.10",
@@ -61,7 +62,7 @@
         "@types/node": "^22.12.0",
         "@types/node-schedule": "^1.3.2",
         "@types/stream-json": "^1.7.2",
-        "@types/supertest": "^2.0.12",
+        "@types/supertest": "^6.0.2",
         "@typescript-eslint/eslint-plugin": "^4.11.1",
         "@typescript-eslint/parser": "^4.11.1",
         "babel-core": "^6.26.3",
@@ -69,13 +70,13 @@
         "babel-plugin-transform-typescript-metadata": "^0.3.2",
         "eslint": "^7.17.0",
         "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-config-prettier": "^7.1.0",
+        "eslint-config-prettier": "^7.2.0",
         "eslint-import-resolver-typescript": "^2.7.1",
         "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-prettier": "^3.3.0",
+        "eslint-plugin-prettier": "^3.4.1",
         "jest": "^29.7.0",
-        "prettier": "^2.2.1",
-        "supertest": "^6.3.4",
+        "prettier": "^2.8.8",
+        "supertest": "^7.0.0",
         "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
