--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+	"ts-node": {
+		"require": ["tsconfig-paths/register"]
+	},
 	"compilerOptions": {
 		"module": "CommonJS",
 		"target": "ES2015",
@@ -30,7 +33,7 @@
 			"@errors/*": ["Errors/*"]
 		},
 
-		"types": ["jest"],
+		"types": ["node", "jest"],
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
