fix: yarn tsc build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
 		"sourceMap": true,
 		"sourceRoot": "/",
 
+		"rootDir": "./",
 		"baseUrl": "./src",
 		"paths": {
 			"~types/*": ["@types/*"],
@@ -39,5 +40,6 @@
 		"emitDecoratorMetadata": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true
-	}
+	},
+	"exclude": ["node_modules", "dist", "__tests__"]
 }
