Updating tests scripts

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
 		"dev:queue": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/Queue.ts",
 		"typeorm": "ts-node -r dotenv/config -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d ./src/Services/TypeORM.ts",
 		"admin": "ts-node-dev --inspect -r dotenv/config -r tsconfig-paths/register --respawn --transpile-only src/Admin/server.ts",
-		"test": "jest",
-		"test:watch": "jest --watch --verbose=true"
+		"test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+		"test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --watch",
+		"test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --coverage"
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.741.0",
